# aoc2022

./: .gitignore  README.md  aoc2022.cabal  cabal.project  flake.nix
app/: Main.hs
src/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  Utils.hs
